Infrastructure/conf_k8s/Email_microservice_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  # TRY TO NAME IT like this...
  # name: email-microservice-deployment

  # JUST IN CASE:, it should be like this...
  name: email-microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: email-microservice
      # type: microservice

  strategy:
    type: RollingUpdate
  template:
    metadata:
      # name: email-microservice
      labels:
        app: email-microservice
        # type: microservice
    spec:
      # hostname: email-microservice
      containers:
      - name: email-microservice
        image: email-microservice:latest
        imagePullPolicy: Never #CHANGE TO ALWAYS________________________
        ports:
          - containerPort: 2020

        # command: ["sh", "-c"]
        # args:
        # - |
        #   apt update -y; apt install curl net-tools iputils-ping -y
        #   echo "Done!"
        #   sleep 9999


        # command: ["/bin/sh"]
        # args: ["-c", "apt update --yes && apt install net-tools curl --yes"]

        resources: {}
        # args: ["ms_service_master"]
  
        
status: {}
---
apiVersion: v1
kind: Service
metadata:
  # labels:
  #   app: email-microservice
  name: email-microservice-service
spec:
  selector:
    app: email-microservice
    # type: microservice
  ports:
    - protocol: TCP
      port: 3200
      targetPort: 2020
  
  type: ClusterIP
