Infrastructure/conf_k8s/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: email-microservice-ingress
  labels:
    name: email-microservice-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: api.email-microservice.com #OVER HERE____________________________________________
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: email-microservice-service
            port: 
              number: 3200

# USE ROUTE53 DOMAIN REGISTRARION: "click" of $3
